fix horizontal scroll issue on mobile devices

--- a/style.css
+++ b/style.css
@@ -757,8 +757,7 @@ input::placeholder {
     }
 
     #hero-3{
-        height: 60vw;
-        width: 60vw;
+        display: none
     }
 
     #hero-4{
@@ -767,8 +766,7 @@ input::placeholder {
     }
 
     #hero-5{
-        height: 60vw;
-        width: 60vw;
+        display: none;
     }
 
     #page1 video {
